<resources>
    <string name="app_name">Lebedeva_v_12</string>
    <string name="vibor">Выбери свое направление</string>
    <string name="catergory">Выбери одну категорию</string>
    <string name="n">TODO</string>
    <string name="hdfhdf">TODO</string>
    <string name="yrtyr">TODO</string>
    <string name="mnbmbnmb">TODO</string>
    <string name="trtwet">TODO</string>
    <string name="hfdhdf">Отношения</string>
    <string name="ысрщд">Школа</string>
    <string name="psygo">Психология</string>
    <string name="bisnes">Бизнес</string>
    <string name="mmgf">TODO</string>
    <string name="mmmhj">TODO</string>
    <string name="uuyuty">TODO</string>
    <string name="fffs">Показать результаты</string>
    <string name="hdssf">TODO</string>
    <string name="yerfs">TODO</string>
    <string name="mhgt">TODO</string>
    <string name="mmmhg">TODO</string>
    <string name="vvssdsd">Ваш выбор</string>
    <string name="uuuyt">TODO</string>
    <string name="info">Томас Маак, Никола Плесс Ответственное лидерство</string>
    <string name="rubl">890 рублей</string>
    <string name="fsfa">Доставка</string>
    <string name="Cours">Курьер</string>
    <string name="Vivso">Самовывоз</string>
    <string name="ngffd">TODO</string>
    <string name="numbs">Введите свой номер телефона</string>
    <string name="fsafasf">Введите свое имя</string>
    <string name="faffsa">Заказать</string>
    <string name="site">На сайт</string>
</resources>